--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,13 +2,18 @@
 # jUniConv Unicode Characters to Java Entities Converter
 # https://itpro.cz/juniconv/
 
-# CUSTOMER
-customer.id=ID
-customer.name=Ad\u0131
-customer.surname=Soyad\u0131
-customer.email=Email
-customer.password=\u015Eifre
-customer.date=\Tarih
-customer.update=Guncelle
-customer.show=Goster
-customer.delete=Sil
+# COMMON
+date=\Tarih
+update=Guncelle
+show=Goster
+delete=Sil
+
+# PRODUCT
+product.id=ID
+product.name=Ad\u0131
+product.price=Soyad\u0131
+product.quantify=Email
+
+
+
+
